test_programs/compile_failure/noirc_frontend_tests_disallows_underscore_on_right_hand_side/src/main.nr

        fn main() {
            let _ = 1;
            let _x = _;
        }
    